# scatter

./: .gitignore  LICENSE  README.md
metrics/: README.md  pyproject.toml
metrics/generic/: occurrences.py  occurrences.yaml
metrics/home/meterstanden/: CHANGELOG.md  README.md  Ratio_Zonnepanelen.html  Verbruik_Elektriciteit.html
metrics/home/meterstanden/data/: meteo-12-2022.txt  meterstanden.csv  solar-2020.csv  year.csv
metrics/home/meterstanden/notebooks/: Meterstanden-pd-bokeh.ipynb  Meterstanden-pd-hv.ipynb  Meterstanden-pd-mpl.ipynb
metrics/home/meterstanden/src/: dark.mplstyle  drawing_canvas.py  main.py  main_window.py  meterstanden-np-bokeh.py  meterstanden-np-mpl.py  overlap.py
metrics/src/metrics/generic/: occurrences.py
metrics/src/metrics/home/meterstanden/: Verbruik_Gas.html  Verbruik_Water.html
metrics/src/metrics/home/meterstanden/data/: README.TXT  meteo-11-2022.txt  meterstanden.csv
metrics/src/metrics/home/meterstanden/notebooks/: SunnyPortal.ipynb
metrics/src/metrics/home/meterstanden/src/: data.py  main_window.ui
