[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metrics"
description = "Keep track of different metrics"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rik Huygen", email = "rik.huygen@me.com"},
]
dependencies = [
    "rich",
    "textual",
    "numpy",
    "logme",
    "pandas",
    "matplotlib",
    "seaborn",
    "qdarkstyle",
    "pyqt5",
    "cycler",
    "watchdog",
    "ipykernel",
    "ipython",
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["home"]