[project]
name = "metrics"
description = "Keep track of different metrics"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rik Huygen", email = "rik.huygen@me.com"},
]
dependencies = [
    "rich",
    "textual",
    "numpy",
    "logme",
    "pandas",
    "matplotlib",
    "seaborn",
    "qdarkstyle",
    "pyqt5",
    "cycler",
    "watchdog",
    "ipykernel",
    "ipython",
    "requests",
    "ruamel.yaml",
    "typer",
]

[project.scripts]
occurrences = "metrics.generic.occurrences:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metrics"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
